Workaround for JS error: "TypeError: h$concur is undefined". Inspired by package.json and webpack.config.js from https://github.com/concurhaskell/concur-react-starter

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Anupam Jain",
   "license": "ISC",
   "dependencies": {
+    "react": "^16.1.0",
+    "react-dom": "^16.1.0",
     "react-sortable-tree": "^1.2.2"
   }
 }
